trunk/Archive2/33/15eee536f1873f/output
main.cpp:9:12: error: cannot specialize (with 'template<>') a member of an unspecialized template
void S<T>::foo<int>()
           ^
1 error generated.
